Style fixes for buttons, input, price alignment and font, svg check marks. Add font awesome as import to project.

--- a/css/main.css
+++ b/css/main.css
@@ -98,21 +98,25 @@ textarea {
 
 html {
   font-family: 'Manrope';
+  font-size: 16px;
   background-color: var(--black);
   color: var(--white);
   max-width: none;
 }
 
-main > *, footer {
-  display: grid;
-  grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
-}
+@media  screen and (min-width: 600px) {
+  main > *, footer {
+    display: grid;
+    grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
+  }
 
-.hero-container,
-.value-prop-container,
-.pricing-container,
-.cta-container {
-  grid-column: 2/4;
+  .hero-container,
+  .value-prop-container,
+  .pricing-container,
+  .cta-container {
+    grid-column: 2/4;
+  }
+
 }
 
 .logo,
@@ -137,9 +141,25 @@ main > *, footer {
 }
 
 p {
-  color: var(--grey)
+  color: var(--grey);
+  line-height: 1.563rem;
 }
 
+ul > li {
+  list-style: none;
+  font-weight: 500;
+  font-size: 0.938rem;
+  line-height: 1.563rem;
+  margin-bottom: 0.75rem;
+}
+
+i {
+  margin-right: .5rem;
+}
+
+.dark-theme > ul > li > i {
+
+}
 .hero-img-mobile {
   margin-top: 2em;
   margin-bottom: 2em;
@@ -155,8 +175,8 @@ p {
 
 .value-prop__img > img {
   background-color: var(--etched-navy);
-  border-radius: 3em;
-  padding: 1em;
+  padding: 1.375rem 1.5rem 1.375rem 1.875rem;
+  border-radius: 2.813rem;
 }
 
 .card {
@@ -174,8 +194,23 @@ p {
   background-color: var(--teal);
 }
 
+.cl-green {
+  color: var(--teal);
+}
+
 .price-tag {
   display: flex;
+  align-items: center;
+  font-size: 2.5rem;
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+}
+
+.price-tag-unit {
+  font-weight: 300;
+  font-size: 1rem;
+  opacity: .6;
+  padding-left: .5rem;
 }
 
 .cta-container {
@@ -186,14 +221,34 @@ p {
   text-align: center;
 }
 
-.cta-container > button {
+form > button, input {
+  display: block;
+  width: 100%;
+  font-weight: 800;
+  font-size: 0.938rem;
+  line-height: 1.563rem;
   border: none;
-  border-radius: 3em;
-  width: 6em;
+  border-radius: 1.5rem;
+}
+
+input {
+  color: var(--white);
+  background: var(--etched-navy);
+  padding: 0.75rem 0 0.688rem 1.125rem;
+  margin-bottom: 1.5rem;
+}
+
+button {
+  text-align: center;
+  color: var(--teal);
+  background: var(--etched-navy);
+  padding: 0.75rem 0 0.688rem 0;
+  text-align: center;
+  cursor: pointer;
 }
 
 .cta-container > div {
-  
+
 }
 
 
